--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fibonacci Sequence</title>
 </head>
 <body>
-    <div class="container">
-        <h1>Fibonacci Sequence</h1>
-        <p>To view the sequence, kindly open the developer console for your browser. Thank you po.</p>
-    </div>
-    
+    <h1>Fibonacci Sequence</h1>
+    <p>Click the button to generate the Fibonacci sequence:</p>
+    <button id="generateButton">Generate</button>
+    <div id="result"></div>
     <script src="script.js"></script>
 </body>
 </html>
