--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <title>Fibonacci Sequence</title>
 </head>
 <body>
+    <div class="container">
     <h1>Fibonacci Sequence</h1>
     <p>Click the button to generate the Fibonacci sequence:</p>
     <button id="generateButton">Generate</button>
     <div id="result"></div>
     <script src="script.js"></script>
+    </div>
 </body>
 </html>
